--- a/_posts/2025-04-02-cs118-lecture.md
+++ b/_posts/2025-04-02-cs118-lecture.md
@@ -91,14 +91,16 @@ toc: true
 - *Model Transform*: Begins by arranging the objects in the world using a model transform
     - Involves scaling, rotation, translation, shear transformations to propagate the world space
 - *View Transform*: Positions and orients the camera using a view transform
-    - Translate the camera to the origi ($T$) and then rotate it appropriately ($R$); final transformation is $M = RT$
+    - Translate the camera to the origin ($T$) and then rotate it appropriately ($R$); final transformation is $M = RT$
 - *Projection Transform*: Defines properties of the camera (FOV, lens) and projects the 3D space onto the camera using a projection transform
     - Uses gaze direction (shear), FOV, aspect ratio, near plane (image plane), and far plane (cuts off rest of scene) to create the 2D image
     - Displays all objects inside of the **view frustum** which is a 3D object connecting the near and far planes 
         - Must be normalized (to a cube) so conversion to window coordinates is easy
+        - Requires shear, scale, and projective transformation to convert
     - Final transformation matrix: ${v_{clip} = M_{proj} \cdot M_{view} \cdot M_{model} \cdot v}$
     - Must clip objects to fit on screen by transforming coordinates again
     - z-coordinate is retained for occlusion
+    - To make it look like the camera is coming from the right perspective, a *perspective projection* is applied which uses translation (to move the camera), shear (to change the LookAt value), and scaling (to convert to cuboid)
 - A Viewport Transform is performed
 - TLDR: Takes 3D vertices and puts them on a 2D screen, ensuring that only vertices that are "on-screen" are rendered
 
@@ -114,6 +116,7 @@ toc: true
     - **Phong illumination/lighting** calculates three channels (ambient, diffuse, specular) and combinews them to light objects
         - Requires a material color and a light color for each channel
         - Ambient: viewer-independent, acts as a "background color"
+            - Formula: $m\cdot l$; does not depend on viewer, normals, or light
         - Diffuse: light coming off of a surface, relies on the angle of lighting and the normal of the surface
             - Formula: $m\cdot l \cdot \max(L\cdot N, 0)$, where $L\cdot N$ is the dot product between the light and the normal angles
         - Specular: Reflected light depending on where the viewer is standing, models the shininess of objects
@@ -150,10 +153,13 @@ toc: true
         - The **binocular (stereo) visual field** is the overlap of the two eyes; allows you to see depth 
     - Monocular = *periphery*, binocular = *fovea*
         - Can only see color in fovea
+    - The total visual field is about 200 degrees; the binocular visual field is about 120 degrees
 - Headsets are limited because there is a minimum distance that people are able to focus at 
     - Strategy: Use two lenses, increasing the FOV and weight
 - Visual acuity is difficult to achieve because the photoreceptors capture 1 arcmin of visual angle
     - Leads to requiring a massive amount of pixels; high compute and data requirements
+    - The eye will see a certain number of "cycles" in one degree, where there are two pixels per cycle (high and low)
+        - This is known as the **resolution**, more cycles per degree means better resolution
 - **Minimum Angle of Resolution**: $\omega = me + \omega_0$
     - $\omega$: resolution in degrees per cycle
     - $e$: angle per eccentricity in degrees
@@ -202,3 +208,9 @@ toc: true
 ## HMD Display
 
 - Basic idea: Have a lens that is a short distance away from a micro display
+- Lens magnifies the virtual image to appear at a realistic distance away from the viewer
+- Must account for *pincushion* (inwards) or *barrel* (outwards) distortion created by the lens by applying the opposite distortion
+
+## Varifocal Display
+
+- Use an actuator and an eye-tracking camera to move the screen away/towards the viewer based on where they are looking in order to remove the vergence-accomodation issue
