--- a/_posts/2025-04-05-econ113-lecture.md
+++ b/_posts/2025-04-05-econ113-lecture.md
@@ -477,7 +477,7 @@ toc: true
     - Leads to a tradeoff between rule following and maximizing material payoff
 - Homo Normist is experimentally proven and rational (because their choices are consistent)
 
-## Homo Normist Games
+## One-Shot Homo Normist Games
 
 - In the Dictator Game, different norms can lead to the dictator sharing
     - The community reference for player 1 does not come from player 2 since player 2 has no action; it comes from people outside of the game
@@ -497,3 +497,18 @@ toc: true
     - With norm-following preferences and an internal community reference, player 2 will likely conditionally cooperate, forcing player 1 to cooperate due to the unique SPE being $(C, CD)$
     - With an external community reference, Homo Economicus will defect as player 1 because player 2 becomes an unconditional cooperator
     - In general, conditional cooperation is better for cooperation
+- In the Linear Public Good Game, the socially efficient outcome of donating all income to the public good can only be achieved when norm saliences are large
+    - Using an internal community reference, the norm salience needed for cooperation decreases as compliance increases
+    - This turns the game into a coordination game where the equilibria are to donate everything or donate nothing
+    - With large groups of people, people have heterogenous preferences, and one person's defection can undermine the group's cooperation
+        - Increasing the size of the group increases the required norm salience
+
+### General Takeaways
+
+1. The community reference (internal or external) depends on the setting
+2. Norms can prescribe costly rewards and punishments
+3. Internalized norms can make cooperation an equilibrium in a one-shot game
+4. Normist preferences can create a coordination incentive
+5. The exact collection of preferences can have have a large effect on the equilibrium (i.e. two Homo Normist vs. one Homo Normist and one Homo Economicus)
+6. Norms of conditional cooperation are especially effective
+7. Acceptable actions do not have to be NE in the base material game
